test/rbkt/Queries/zorba/error/error4.spec
Error: http://www.example.com:testerror
